[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
once_cell = "1.18.0"
lazy_static = "1.4.0"
nom = "7.1.3"
clap = { version = "4.4.11", features = ["derive"] }
